<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foreground="?android:attr/selectableItemBackground"
    android:minHeight="103.14286dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="103dp"
        android:layout_height="103dp"
        android:background="#00000000"
        android:elevation="5dp"
        android:paddingRight="-52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/rowLetter"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="M"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/rowRune"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:width="53dp"
            android:text="\u16D7"
            android:textSize="70sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/rowRuneName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/nameMannaz"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rowDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/descriptionMannaz" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>