...
    <string name="title">Rune Writings</string>
    <string name="appDescription">With this app you can learn runes and transpile texts from runes to letters and the other way around</string>
    <string name="generateUnicodeRunes">generate Unicode Runes</string>
    <string name="lettersToUnicodeRunes">letters to Unicode runes</string>
    <string name="descriptionUnicodeActivity">Enter a text with letters to get this text in Unicode for Runes in the logs.</string>
    <string name="generateUnicode">Generate Unicode</string>
    <string name="useRunes">use runes</string>
    <string name="runicAlphabet">runic alphabet</string>
    <string name="nameAnsuz">Ansuz</string>
    <string name="descriptionAnsuz">The fourth rune of the Elder Futhark</string>
    <string name="nameBerkanan">Berkanan</string>
    <string name="descriptionBerkanan">The eighteenth rune of the Elder Futhark</string>
    <string name="nameKaun">Kaun</string>
    <string name="descriptionKaun">The sixth rune of the Younger Futhark</string>
...
    <string name="nameWynn">Wynn</string>
    <string name="descriptionWynn">The eight rune of the Elder Futhark</string>
    <string name="nameEihwaz">Eihwaz</string>
    <string name="descriptionEihwaz">The thirteenth rune of the Elder Futhark</string>
    <string name="nameAlgiz">Algiz</string>
    <string name="descriptionAlgiz">The fifteenth rune of the Elder Futhark</string>
    <string name="furtherInformation">Further Information</string>
    <string name="letterToRuneQuiz">Letter \u2192 Rune</string>
    <string name="correctRunesInARow">Correct runes in a row:</string>
    <string name="best">Best:</string>
    <string name="delete">Delete</string>
    <string name="enter">Enter</string>
    <string name="copyright">\u00A9 nocego as tribute to JRR Tolkien</string>
...
