package ch.nocego.runeWritings

import android.content.Context
import android.content.Intent
import android.content.SharedPreferences
import android.util.DisplayMetrics
import android.util.TypedValue
import android.view.View
import android.view.ViewGroup
import android.widget.LinearLayout
import android.widget.ListAdapter
import android.widget.ListView
import android.widget.TextView
import androidx.test.espresso.Espresso.onData
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.PerformException
import androidx.test.espresso.UiController
import androidx.test.espresso.ViewAction
import androidx.test.espresso.ViewInteraction
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.platform.app.InstrumentationRegistry.getInstrumentation
import androidx.test.rule.ActivityTestRule
import ch.nocego.runeWritings.contextHolder.ContextHolder
import ch.nocego.runeWritings.model.Alphabet
import ch.nocego.runeWritings.model.LetterToRunes
import ch.nocego.runeWritings.model.Rune
import ch.nocego.runeWritings.model.Transpiler.Companion.runeUnicodeByLetter
import ch.nocego.runeWritings.runicAlphabet.RunicAlphabetActivity
import com.google.android.material.tabs.TabLayout
import org.hamcrest.CoreMatchers.allOf
import org.hamcrest.CoreMatchers.anything
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.TypeSafeMatcher
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import kotlin.math.floor


@RunWith(AndroidJUnit4::class)
class RunicAlphabetActivityInstrumentedtests {
    private val ltr = LetterToRunes()
    private val alphabetItemWidthInDp = 70 //50+2*10
    private var targetContext: Context = getInstrumentation().targetContext
    private lateinit var preferencesEditor: SharedPreferences.Editor
    private lateinit var runes: MutableList<Rune>
    private lateinit var alphabetUpperCaseIterator: Iterator<String>

    @get:Rule
    var mainActivityRule: ActivityTestRule<MainActivity> =
        ActivityTestRule(MainActivity::class.java, true, false)

    @get: Rule
    var runicAlphabetActivityRule: ActivityTestRule<RunicAlphabetActivity> =
        ActivityTestRule(RunicAlphabetActivity::class.java, true, false)

    @Before
    fun setUp() {
        ContextHolder.setContext(targetContext)
        setDefaultSharedPrefsValues()
        alphabetUpperCaseIterator = Alphabet.alphabetUpperCase().iterator()
        runes = ArrayList()
        alphabetUpperCaseIterator.forEach {
            runes.add(ltr.getRuneInstanceOfOneChar(it.toCharArray()[0])!!)
        }
        alphabetUpperCaseIterator = Alphabet.alphabetUpperCase().iterator()
        runicAlphabetActivityRule.launchActivity(Intent())
    }

    @Test
    fun lettersInUseRunesSwitchByDefaultAfterIntent() {
        mainActivityRule.launchActivity(Intent())
        pressButtonRunicAlphabet()
        onView(withId(R.id.useRunesSwitch)).check(matches(withText(R.string.useRunes)))
    }

    @Test
    fun runesInUseRunesSwitchAfterSwitchingAfterIntent() {
        mainActivityRule.launchActivity(Intent())
        moveSwitch()
        pressButtonRunicAlphabet()
        val runicTranspilation = getRunicTranspilation(R.string.useRunes)
        onView(withId(R.id.useRunesSwitch)).check(matches(withText(runicTranspilation)))
    }

    @Test
    fun lettersInUseRunesSwitchByDefault() {
        onView(withId(R.id.useRunesSwitch)).check(matches(withText(R.string.useRunes)))
    }

    @Test
    fun runesInUseRunesSwitchAfterSwitching() {
        moveSwitch()
        val runicTranspilation = getRunicTranspilation(R.string.useRunes)
        onView(withId(R.id.useRunesSwitch)).check(matches(withText(runicTranspilation)))
    }

    @Test
    fun useRunesSwitchOffByDefaultAfterIntent() {
        mainActivityRule.launchActivity(Intent())
        pressButtonRunicAlphabet()
        onView(withId(R.id.useRunesSwitch)).check(matches(isNotChecked()))
    }

    @Test
    fun useRunesSwitchOnAfterSwitchingAfterIntent() {
        mainActivityRule.launchActivity(Intent())
        moveSwitch()
        pressButtonRunicAlphabet()
        onView(withId(R.id.useRunesSwitch)).check(matches(isChecked()))
    }

    @Test
    fun tabLayoutZeroIsSelectedByDefault() {
        onView(withId(R.id.tabs)).check(matches(tabIsSelected(0)))
    }

    @Test
    fun tabLayoutOneIsSelectedAfterChange() {
        onView(withId(R.id.tabs)).perform(selectTabAtPosition(1))
        onView(withId(R.id.tabs)).check(matches(tabIsSelected(1)))
    }

    @Test
    fun lettersInTabLayoutZeroByDefaultAfterIntent() {
        mainActivityRule.launchActivity(Intent())
        pressButtonRunicAlphabet()
        onView(withId(R.id.tabs)).check(matches(tabMatchesWithText(0, R.string.runicAlphabet)))
    }

    @Test
    fun runesInTabLayoutZeroAfterSwitchingAfterIntent() {
        mainActivityRule.launchActivity(Intent())
        moveSwitch()
        pressButtonRunicAlphabet()
        val runicTranspilation = getRunicTranspilation(R.string.runicAlphabet)
        onView(withId(R.id.tabs)).check(matches(tabMatchesWithText(0, runicTranspilation)))
    }

    @Test
    fun lettersInTabLayoutZeroByDefault() {
        onView(withId(R.id.tabs)).check(matches(tabMatchesWithText(0, R.string.runicAlphabet)))
    }

    @Test
    fun runesInTabLayoutZeroAfterSwitching() {
        moveSwitch()
        val runicTranspilation = getRunicTranspilation(R.string.runicAlphabet)
        onView(withId(R.id.tabs)).check(matches(tabMatchesWithText(0, runicTranspilation)))
    }

    @Test
    fun lettersInTabLayoutOneByDefaultAfterIntent() {
        mainActivityRule.launchActivity(Intent())
        pressButtonRunicAlphabet()
        onView(withId(R.id.tabs)).check(matches(tabMatchesWithText(1, R.string.furtherInformation)))
    }

    @Test
    fun runesInTabLayoutOneAfterSwitchingAfterIntent() {
        mainActivityRule.launchActivity(Intent())
        moveSwitch()
        pressButtonRunicAlphabet()
        val runicTranspilation = getRunicTranspilation(R.string.furtherInformation)
        onView(withId(R.id.tabs)).check(matches(tabMatchesWithText(1, runicTranspilation)))
    }

    @Test
    fun lettersInTabLayoutOneByDefault() {
        onView(withId(R.id.tabs)).check(matches(tabMatchesWithText(1, R.string.furtherInformation)))
    }

    @Test
    fun runesInTabLayoutOneAfterSwitching() {
        moveSwitch()
        val runicTranspilation = getRunicTranspilation(R.string.furtherInformation)
        onView(withId(R.id.tabs)).check(matches(tabMatchesWithText(1, runicTranspilation)))
    }

    @Test
    fun correctLettersInFirstColumnByDefaultAfterIntent() {
        mainActivityRule.launchActivity(Intent())
        pressButtonRunicAlphabet()
        onView(withId(R.id.tabs)).perform(selectTabAtPosition(1))
        Thread.sleep(500)

        val listViewItemsCanBeScrolledTo = listViewItemsCanBeScrolledTo()

        for (x in 0..listViewItemsCanBeScrolledTo) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(Alphabet.alphabetUpperCase()[x], R.id.rowLetter)
                )
            )
            mySwipeUp(x)
        }
        //the ones on the bottom which cant be swiped
        for (x in listViewItemsCanBeScrolledTo + 1..25) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        Alphabet.alphabetUpperCase()[x],
                        x % listViewItemsCanBeScrolledTo,
                        R.id.rowLetter
                    )
                )
            )
        }
    }

    @Test
    fun correctRunesInFirstColumnAfterSwitchingAfterIntent() {
        mainActivityRule.launchActivity(Intent())
        moveSwitch()
        pressButtonRunicAlphabet()
        onView(withId(R.id.tabs)).perform(selectTabAtPosition(1))
        Thread.sleep(500)

        val listViewItemsCanBeScrolledTo = listViewItemsCanBeScrolledTo()

        for (x in 0..listViewItemsCanBeScrolledTo) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(runes[x].unicodeSymbol(), R.id.rowLetter)
                )
            )
            mySwipeUp(x)
        }
        //the ones on the bottom which cant be swiped
        for (x in listViewItemsCanBeScrolledTo + 1..25) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        runes[x].unicodeSymbol(),
                        x % listViewItemsCanBeScrolledTo,
                        R.id.rowLetter
                    )
                )
            )
        }
    }

    @Test
    fun correctLettersInFirstColumnByDefault() {
        onView(withId(R.id.tabs)).perform(selectTabAtPosition(1))
        Thread.sleep(500)
        val listViewItemsCanBeScrolledTo = listViewItemsCanBeScrolledTo()

        for (x in 0..listViewItemsCanBeScrolledTo) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(Alphabet.alphabetUpperCase()[x], R.id.rowLetter)
                )
            )
            mySwipeUp(x)
        }
        //the ones on the bottom which cant be swiped
        for (x in listViewItemsCanBeScrolledTo + 1..25) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        Alphabet.alphabetUpperCase()[x],
                        x % listViewItemsCanBeScrolledTo,
                        R.id.rowLetter
                    )
                )
            )
        }
    }

    @Test
    fun correctRunesInFirstColumnAfterSwitching() {
        moveSwitch()
        onView(withId(R.id.tabs)).perform(selectTabAtPosition(1))
        Thread.sleep(500)
        val listViewItemsCanBeScrolledTo = listViewItemsCanBeScrolledTo()

        for (x in 0..listViewItemsCanBeScrolledTo) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(runes[x].unicodeSymbol(), R.id.rowLetter)
                )
            )
            mySwipeUp(x)
        }
        //the ones on the bottom which cant be swiped
        for (x in listViewItemsCanBeScrolledTo + 1..25) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        runes[x].unicodeSymbol(),
                        x % listViewItemsCanBeScrolledTo,
                        R.id.rowLetter
                    )
                )
            )
        }
    }

    @Test
    fun correctRunesInSecondColumnByDefaultAfterIntent() {
        mainActivityRule.launchActivity(Intent())
        pressButtonRunicAlphabet()
        onView(withId(R.id.tabs)).perform(selectTabAtPosition(1))
        Thread.sleep(500)
        val listViewItemsCanBeScrolledTo = listViewItemsCanBeScrolledTo()

        for (x in 0..listViewItemsCanBeScrolledTo) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(runes[x].unicodeSymbol(), R.id.rowRune)
                )
            )
            mySwipeUp(x)
        }
        //the ones on the bottom which cant be swiped
        for (x in listViewItemsCanBeScrolledTo + 1..25) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        runes[x].unicodeSymbol(),
                        x % listViewItemsCanBeScrolledTo,
                        R.id.rowRune
                    )
                )
            )
        }
    }

    @Test
    fun correctLettersInSecondColumnAfterSwitchingAfterIntent() {
        mainActivityRule.launchActivity(Intent())
        moveSwitch()
        pressButtonRunicAlphabet()
        onView(withId(R.id.tabs)).perform(selectTabAtPosition(1))
        Thread.sleep(500)
        val listViewItemsCanBeScrolledTo = listViewItemsCanBeScrolledTo()

        for (x in 0..listViewItemsCanBeScrolledTo) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        ltr.getUpperCaseTextFromRunes(runes[x].unicodeSymbol()),
                        R.id.rowRune
                    )
                )
            )
            mySwipeUp(x)
        }
        //the ones on the bottom which cant be swiped
        for (x in listViewItemsCanBeScrolledTo + 1..25) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        ltr.getUpperCaseTextFromRunes(runes[x].unicodeSymbol()),
                        x % listViewItemsCanBeScrolledTo,
                        R.id.rowRune
                    )
                )
            )
        }
    }

    @Test
    fun correctRunesInSecondColumnByDefault() {
        onView(withId(R.id.tabs)).perform(selectTabAtPosition(1))
        Thread.sleep(500)
        val listViewItemsCanBeScrolledTo = listViewItemsCanBeScrolledTo()

        for (x in 0..listViewItemsCanBeScrolledTo) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(runes[x].unicodeSymbol(), R.id.rowRune)
                )
            )
            mySwipeUp(x)
        }
        //the ones on the bottom which cant be swiped
        for (x in listViewItemsCanBeScrolledTo + 1..25) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        runes[x].unicodeSymbol(),
                        x % listViewItemsCanBeScrolledTo,
                        R.id.rowRune
                    )
                )
            )
        }
    }

    @Test
    fun correctLettersInSecondColumnAfterSwitching() {
        moveSwitch()
        onView(withId(R.id.tabs)).perform(selectTabAtPosition(1))
        Thread.sleep(500)
        val listViewItemsCanBeScrolledTo = listViewItemsCanBeScrolledTo()

        for (x in 0..listViewItemsCanBeScrolledTo) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        ltr.getUpperCaseTextFromRunes(runes[x].unicodeSymbol()),
                        R.id.rowRune
                    )
                )
            )
            mySwipeUp(x)
        }
        //the ones on the bottom which cant be swiped
        for (x in listViewItemsCanBeScrolledTo + 1..25) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        ltr.getUpperCaseTextFromRunes(runes[x].unicodeSymbol()),
                        x % listViewItemsCanBeScrolledTo,
                        R.id.rowRune
                    )
                )
            )
        }
    }

    @Test
    fun correctLettersStringRowRuneNameByDefaultAfterIntent() {
        mainActivityRule.launchActivity(Intent())
        pressButtonRunicAlphabet()
        onView(withId(R.id.tabs)).perform(selectTabAtPosition(1))
        Thread.sleep(500)
        val listViewItemsCanBeScrolledTo = listViewItemsCanBeScrolledTo()

        for (x in 0..listViewItemsCanBeScrolledTo) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(runes[x].name(), R.id.rowRuneName)
                )
            )
            mySwipeUp(x)
        }
        //the ones on the bottom which cant be swiped
        for (x in listViewItemsCanBeScrolledTo + 1..25) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        runes[x].name(),
                        x % listViewItemsCanBeScrolledTo,
                        R.id.rowRuneName
                    )
                )
            )
        }
    }

    @Test
    fun correctRunesStringRowRuneNameAfterSwitchingAfterIntent() {
        mainActivityRule.launchActivity(Intent())
        Thread.sleep(500)
        moveSwitch()
        pressButtonRunicAlphabet()
        onView(withId(R.id.tabs)).perform(selectTabAtPosition(1))
        Thread.sleep(500)
        val listViewItemsCanBeScrolledTo = listViewItemsCanBeScrolledTo()

        for (x in 0..listViewItemsCanBeScrolledTo) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        ltr.getRunesFromText(runes[x].name()),
                        R.id.rowRuneName
                    )
                )
            )
            mySwipeUp(x)
        }
        //the ones on the bottom which cant be swiped
        for (x in listViewItemsCanBeScrolledTo + 1..25) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        ltr.getRunesFromText(runes[x].name()),
                        x % listViewItemsCanBeScrolledTo,
                        R.id.rowRuneName
                    )
                )
            )
        }
    }

    @Test
    fun correctLettersStringRowRuneNameByDefault() {
        onView(withId(R.id.tabs)).perform(selectTabAtPosition(1))
        Thread.sleep(500)
        val listViewItemsCanBeScrolledTo = listViewItemsCanBeScrolledTo()

        for (x in 0..listViewItemsCanBeScrolledTo) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(runes[x].name(), R.id.rowRuneName)
                )
            )
            mySwipeUp(x)
        }
        //the ones on the bottom which cant be swiped
        for (x in listViewItemsCanBeScrolledTo + 1..25) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        runes[x].name(),
                        x % listViewItemsCanBeScrolledTo,
                        R.id.rowRuneName
                    )
                )
            )
        }
    }

    @Test
    fun correctRunesStringRowRuneNameAfterSwitching() {
        moveSwitch()
        onView(withId(R.id.tabs)).perform(selectTabAtPosition(1))
        Thread.sleep(500)
        val listViewItemsCanBeScrolledTo = listViewItemsCanBeScrolledTo()

        for (x in 0..listViewItemsCanBeScrolledTo) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        ltr.getRunesFromText(runes[x].name()),
                        R.id.rowRuneName
                    )
                )
            )
            mySwipeUp(x)
        }
        //the ones on the bottom which cant be swiped
        for (x in listViewItemsCanBeScrolledTo + 1..25) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        ltr.getRunesFromText(runes[x].name()),
                        x % listViewItemsCanBeScrolledTo,
                        R.id.rowRuneName
                    )
                )
            )
        }
    }

    @Test
    fun correctLettersStringRowDescriptionTextByDefaultAfterIntent() {
        mainActivityRule.launchActivity(Intent())
        pressButtonRunicAlphabet()
        onView(withId(R.id.tabs)).perform(selectTabAtPosition(1))
        Thread.sleep(500)
        val listViewItemsCanBeScrolledTo = listViewItemsCanBeScrolledTo()

        for (x in 0..listViewItemsCanBeScrolledTo) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(runes[x].description(), R.id.rowDescriptionText)
                )
            )
            mySwipeUp(x)
        }
        //the ones on the bottom which cant be swiped
        for (x in listViewItemsCanBeScrolledTo + 1..25) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        runes[x].description(),
                        x % listViewItemsCanBeScrolledTo,
                        R.id.rowDescriptionText
                    )
                )
            )
        }
    }

    @Test
    fun correctRunesStringRowDescriptionTextAfterSwitchingAfterIntent() {
        mainActivityRule.launchActivity(Intent())
        Thread.sleep(500)
        moveSwitch()
        pressButtonRunicAlphabet()
        onView(withId(R.id.tabs)).perform(selectTabAtPosition(1))
        Thread.sleep(500)
        val listViewItemsCanBeScrolledTo = listViewItemsCanBeScrolledTo()

        for (x in 0..listViewItemsCanBeScrolledTo) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        ltr.getRunesFromText(runes[x].description()),
                        R.id.rowDescriptionText
                    )
                )
            )
            mySwipeUp(x)
        }
        //the ones on the bottom which cant be swiped
        for (x in listViewItemsCanBeScrolledTo + 1..25) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        ltr.getRunesFromText(runes[x].description()),
                        x % listViewItemsCanBeScrolledTo,
                        R.id.rowDescriptionText
                    )
                )
            )
        }
    }

    @Test
    fun correctLettersStringRowDescriptionTextByDefault() {
        onView(withId(R.id.tabs)).perform(selectTabAtPosition(1))
        Thread.sleep(500)
        val listViewItemsCanBeScrolledTo = listViewItemsCanBeScrolledTo()
        Thread.sleep(500)

        for (x in 0..listViewItemsCanBeScrolledTo) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(runes[x].description(), R.id.rowDescriptionText)
                )
            )
            mySwipeUp(x)
        }
        //the ones on the bottom which cant be swiped
        for (x in listViewItemsCanBeScrolledTo + 1..25) {
            onView(withId(R.id.runicAlphabetFurtherInformationListView)).check(
                matches(
                    listViewViewContainsStringMatch(
                        runes[x].description(),
                        x % listViewItemsCanBeScrolledTo,
                        R.id.rowDescriptionText
                    )
                )
            )
        }
    }

    @Test
    fun correctRunesStringRowDescriptionTextAfterSwitching() {
